--- a/client/src/components/common/CarouselItems/CarouselItem/CarouselItem.module.css
+++ b/client/src/components/common/CarouselItems/CarouselItem/CarouselItem.module.css
@@ -3,7 +3,8 @@
 .container {
     height: 120px;
     width: 210px;
-    display: block;
+    display: flex;
+    flex-direction: column;
     font-size: 24px;
     background-color: var(--action-blue);
     color: var(--background-yellow);
@@ -18,7 +19,7 @@
 
 .label {
     text-align: center;
-    padding: 12px 8px;
+    padding: 0px 8px;
     width: 93%;
     display: block;
     overflow: hidden;
