--- a/client/src/components/common/UserResult/ChatResult.module.css
+++ b/client/src/components/common/UserResult/ChatResult.module.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     height: 150px;
-    width: 300px;
+    width: 33%;
     background-color: var(--background-yellow);
     box-shadow: 2px 2px 4px var(--dark-gray);
 }
