--- a/client/src/components/common/UserResult/BrowseResult.module.css
+++ b/client/src/components/common/UserResult/BrowseResult.module.css
@@ -2,7 +2,7 @@
 
 .userResultContainer {
     height: 300px;
-    width: 500px;
+    width: 30%;
     background-color: var(--background-yellow);
     box-shadow: 2px 2px 4px var(--dark-gray); 
 }
@@ -16,6 +16,7 @@
     border-bottom: solid 2px var(--card-pink);
     color: var(--card-blue);
     width: 100%;
+    margin: 24px 0;
     padding-bottom: 10px;
     font-size: 30px;
     text-align: center;
@@ -31,11 +32,8 @@
 }
 
 .deckCarouselItem {
-    height: 80px;
-    width: 120px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 210px;
+    height: 120px;
     text-align: center;
     font-size: 30px;
     background-color: var(--action-blue);
@@ -45,14 +43,21 @@
 
 .line {
     width: 100%;
-    margin-top: 10px;
-    background: var(--card-pink);
-    border: solid 1px var(--card-pink);
+    height: 24px;
+    border-bottom: solid 2px var(--card-pink);
 }
 
-.name {
-    padding-top: 10px;
-    font-size: 20px;
+.labelContainer {
+   justify-self: center;
+}
+
+.label {
+    font-size: 30px;
+    margin: 16px;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .deckCarouselItem:hover {
