--- a/client/src/components/common/ChatRoomSelectDeck/ChatRoomSelectDeck.module.css
+++ b/client/src/components/common/ChatRoomSelectDeck/ChatRoomSelectDeck.module.css
@@ -3,6 +3,7 @@
     width: 80%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     text-align: center;
     font-family: var(--text-font);
     margin: 16px;
@@ -32,6 +33,10 @@
     color: var(--background-yellow);
 }
 
+.headingText {
+    margin: 8px;
+}
+
 .roomDeets {
     width: 100%;
     display: flex;
@@ -55,4 +60,13 @@
     display: flex;
     justify-content: center;
     gap: 8px;
+}
+
+.waitingMessage {
+    color: var(--dark-gray);
+    font-size: 24px;
+}
+
+.waitingText {
+    margin: 8px !important;
 }
